--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fatcn-ui",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -59,6 +59,7 @@
     "eslint-config-turbo": "^2.3.3",
     "execa": "^9.5.2",
     "fs-extra": "^11.2.0",
+    "hugeicons-react": "^0.3.0",
     "ora": "^8.1.1",
     "path": "^0.12.7",
     "prompts": "^2.4.2",
@@ -69,11 +70,11 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.1.1",
-    "tailwindcss": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "postcss": "^8.4.31",
     "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.31",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
