--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@antfu/ni": "^0.23.1",
     "@changesets/cli": "^2.27.11",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
@@ -60,6 +61,7 @@
     "execa": "^9.5.2",
     "fs-extra": "^11.2.0",
     "hugeicons-react": "^0.3.0",
+    "inquirer": "^12.3.0",
     "ora": "^8.1.1",
     "path": "^0.12.7",
     "prompts": "^2.4.2",
