--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fatcn-ui",
-  "version": "1.0.14",
+  "version": "1.0.18",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -50,6 +50,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@types/prompts": "^2.4.9",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
