--- a/package.json
+++ b/package.json
@@ -1,83 +1,19 @@
 {
-  "name": "fatcn-ui",
-  "version": "1.0.19",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "type": "module",
-  "bin": {
-    "fatcn": "./dist/cli.js"
-  },
-  "scripts": {
-    "build": "tsc && mkdir -p dist/source && cp -r src/components src/lib dist/source/",
-    "postbuild": "chmod +x dist/cli.js",
-    "dev": "tsc --watch",
-    "clean": "rm -rf dist",
-    "typecheck": "tsc --noEmit",
-    "version": "changeset",
-    "release": "changeset publish"
-  },
-  "files": [
-    "src/**/*.tsx",
-    "src/**/*.ts",
-    "cli.js"
+  "name": "fatcn-monorepo",
+  "private": true,
+  "workspaces": [
+    "packages/*"
   ],
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "description": "",
+  "scripts": {
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "clean": "turbo run clean",
+    "lint": "turbo run lint"
+  },
+  "packageManager": "yarn@1.22.22",
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.3",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/nextjs": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/test": "^8.4.7",
-    "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "storybook": "^8.4.7",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2"
-  },
-  "dependencies": {
-    "@antfu/ni": "^0.23.1",
+    "turbo": "^2.3.3",
     "@changesets/cli": "^2.27.11",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-hover-card": "^1.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@types/prompts": "^2.4.9",
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.22",
-    "chalk": "^5.4.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "commander": "^12.1.0",
-    "eslint-config-turbo": "^2.3.3",
-    "execa": "^9.5.2",
-    "fs-extra": "^11.2.0",
-    "hugeicons-react": "^0.3.0",
-    "inquirer": "^12.3.0",
-    "ora": "^8.1.1",
-    "path": "^0.12.7",
-    "prompts": "^2.4.2",
-    "tailwind-merge": "^2.5.5",
-    "turbo": "^2.3.3"
-  },
-  "peerDependencies": {
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-slot": "^1.1.1",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.31",
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
-    "tailwindcss": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "typescript": "^5.7.2"
   }
 }
