--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@fatcn/ui": "*",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "hugeicons-react": "^0.3.0",
+    "motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "tailwindcss-animate": "^1.0.7",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
