--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "clean": "turbo run clean",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "start": "cd packages/web && yarn start"
   },
   "packageManager": "yarn@1.22.22",
   "devDependencies": {
     "turbo": "^2.3.3",
     "@changesets/cli": "^2.27.11",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.0"
   }
 }
