--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "buildCommand": "yarn build",
-    "outputDirectory": "packages/web/.next",
+    "outputDirectory": ".next",
     "installCommand": "yarn install",
     "framework": "nextjs"
   }
