--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,15 +11,28 @@
   },
   "dependencies": {
     "@fatcn/ui": "*",
+    "@shikijs/compat": "^1.24.4",
+    "@types/unist": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "contentlayer2": "^0.5.3",
     "hugeicons-react": "^0.3.0",
     "motion": "^11.15.0",
     "next": "15.1.3",
+    "next-contentlayer2": "^0.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype": "^13.0.2",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-code-import": "^1.2.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "unist-builder": "^4.0.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
