--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -18,11 +18,19 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@fatcn/ui/*": ["../fatcn-ui/*"]
+      "@fatcn/ui/*": ["../fatcn-ui/*"],
+      "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    ".contentlayer/generated", "contentlayer.config.ts",
+  ],
   "exclude": ["node_modules"]
 }
