--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "contentlayer2": "^0.5.3",
     "hugeicons-react": "^0.3.0",
+    "mdast-util-toc": "^7.1.0",
     "motion": "^11.15.0",
     "next": "15.1.3",
     "next-contentlayer2": "^0.5.3",
