--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -30,7 +30,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".contentlayer/generated", "contentlayer.config.ts",
+    ".contentlayer/generated", "contentlayer.config.ts", "content/docs/button.mdx",
   ],
   "exclude": ["node_modules"]
 }
