--- a/packages/fatcn-ui/package.json
+++ b/packages/fatcn-ui/package.json
@@ -55,6 +55,7 @@
     "hugeicons-react": "^0.3.0",
     "inquirer": "^12.3.0",
     "next": "15.1.2",
+   
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
@@ -70,6 +71,8 @@
     "eslint-config-next": "15.1.2",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9"
   }
 }
