--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "docs:generate": "node ./lib/generate-docs.mjs",
+    "build": "npm run docs:generate && next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
+  "type": "module",
   "dependencies": {
     "@fatcn/ui": "*",
+    "@radix-ui/react-visually-hidden": "^1.1.1",
     "@shikijs/compat": "^1.24.4",
     "@types/unist": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "contentlayer2": "^0.5.3",
+    "gray-matter": "^4.0.3",
     "hugeicons-react": "^0.3.0",
     "mdast-util-toc": "^7.1.0",
     "motion": "^11.15.0",
@@ -43,9 +48,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9"
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
