--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,7 +12,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@fatcn/ui": "*",
+    "fatcn-ui": "*",
     "@radix-ui/react-visually-hidden": "^1.1.1",
     "@shikijs/compat": "^1.24.4",
     "@types/unist": "^3.0.3",
