--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,7 @@
       "persistent": true
     },
     "clean": {
-      "cache": false
+      "cache": true
     },
     "lint": {
       "outputs": []
