--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,13 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
+    "web#build": {
+      "dependsOn": ["fatcn-ui#build"],
+      "outputs": [".next/**", "!.next/cache/**"]
+    },
+    "fatcn-ui#build": {
+      "outputs": ["dist/**"]
+    },
     "dev": {
       "cache": false,
       "persistent": true
