--- a/packages/fatcn-ui/tsconfig.json
+++ b/packages/fatcn-ui/tsconfig.json
@@ -11,7 +11,7 @@
       "rootDir": ".",
       "baseUrl": ".",
       "paths": {
-        "@fatcn/ui/*": ["components/*"]
+        "fatcn-ui/*": ["components/*"]
       },
       "strict": true,
       "esModuleInterop": true,
