--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -21,7 +21,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@fatcn/ui/*": ["../fatcn-ui/*"],
+      "@fatcn-ui/*": ["../fatcn-ui/*"],
+      "@fatcn-ui": ["../fatcn-ui"],
       "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
@@ -30,7 +31,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".contentlayer/generated", "contentlayer.config.ts", "content/docs/button.mdx", "tailwind.config.js", "lib/docs-registry.js", "lib/generate-docs.mjs", "lib/generate-docs.mts", "packages/commands/cli.js",
+    ".contentlayer/generated", "contentlayer.config.js", "content/docs/button.mdx", "tailwind.config.js", "lib/docs-registry.js", "lib/generate-docs.mjs", "lib/generate-docs.mts", "packages/commands/cli.js",
   ],
   "exclude": ["node_modules"]
 }
