--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "docs:generate": "node ./lib/generate-docs.mjs",
+    "source:generate": "node ./lib/generate-source-registry.mjs",
     "build": "npm run docs:generate && next build",
     "start": "next start",
     "lint": "eslint .",
@@ -12,7 +13,11 @@
   },
   "type": "module",
   "dependencies": {
-    "fatcn-ui": "*",
+    "@auth/core": "^0.37.0",
+    "@azure-rest/ai-inference": "^1.0.0-beta.5",
+    "@azure/core-auth": "^1.9.0",
+    "@azure/core-sse": "^2.1.3",
+    "@convex-dev/auth": "^0.0.80",
     "@radix-ui/react-visually-hidden": "^1.1.1",
     "@shikijs/compat": "^1.24.4",
     "@types/unist": "^3.0.3",
@@ -20,6 +25,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "contentlayer2": "^0.5.3",
+    "convex": "^1.18.2",
+    "fatcn-ui": "*",
     "gray-matter": "^4.0.3",
     "hugeicons-react": "^0.3.0",
     "mdast-util-toc": "^7.1.0",
@@ -29,6 +36,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "rehype": "^13.0.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.0",
@@ -42,15 +50,17 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
