--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -31,7 +31,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".contentlayer/generated", "contentlayer.config.js", "content/docs/button.mdx", "tailwind.config.js", "lib/docs-registry.js", "lib/generate-docs.mjs", "lib/generate-docs.mts", "packages/commands/cli.js",
+    ".contentlayer/generated", "contentlayer.config.js", "content/docs/button.mdx", "tailwind.config.js", "lib/docs-registry.js", "lib/generate-docs.mjs", "lib/generate-docs.mts", "packages/commands/cli.js", "lib/generate-source-registry.cjs",
   ],
   "exclude": ["node_modules"]
 }
