--- a/packages/fatcn-ui/package.json
+++ b/packages/fatcn-ui/package.json
@@ -25,7 +25,7 @@
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -52,31 +52,33 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@radix-ui/react-visually-hidden": "^1.1.1",
     "autoprefixer": "^10.4.20",
+    "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
+    "cli-alerts": "^2.0.0",
+    "cli-handle-error": "^4.4.0",
+    "cli-handle-unhandled": "^1.1.1",
+    "cli-meow-help": "^4.0.0",
+    "cli-welcome": "^3.0.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "commander": "^11.0.0",
+    "fs-extra": "^11.1.1",
+    "get-package-json-file": "^2.0.0",
     "hugeicons-react": "^0.3.0",
     "inquirer": "^12.3.0",
+    "meow": "^13.2.0",
     "next": "15.1.2",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "chalk": "^5.4.1",
-    "fs-extra": "^11.1.1",
-		"cli-alerts": "^2.0.0",
-		"cli-handle-error": "^4.4.0",
-		"cli-handle-unhandled": "^1.1.1",
-		"cli-meow-help": "^4.0.0",
-		"cli-welcome": "^3.0.0",
-		"get-package-json-file": "^2.0.0",
-		"meow": "^13.2.0",
-    "tsup": "^8.3.5",
-    "path": "^0.12.7",
-    "commander": "^11.0.0"
+    "tsup": "^8.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/fs-extra": "^11.0.1",
+    "@types/inquirer": "^8.2.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -84,8 +86,6 @@
     "eslint-config-next": "15.1.2",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
-    "@types/fs-extra": "^11.0.1",
-    "@types/inquirer": "^8.2.5",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
